# Python_RS-Pro_EC

./: LICENSE.md  README.md  RS_EC.py  example.py  pyproject.toml
Examples/: Terminal_readout.py
RS_EC/: RS_EC.py  __init__.py
